[project]
name = "cornell-sustainabotily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "crawl4ai>=0.7.6",
    "llama-index>=0.14.7",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-llms-groq>=0.4.1",
    "llama-index-llms-openrouter>=0.4.2",
    "nest-asyncio>=1.6.0",
    "playwright==1.54.0",
    "torch>=2.9.0",
]
